# data-validator

./: .gitignore  Dockerfile  README.md  action.yml  pyproject.toml
src/data_validator/: cli.py  engine.py  loader.py  models.py  utils.py
tests/: test_engine.py
